FIX: Fix margin and gap in page 2 and page 4

--- a/src/components/secondMenu/secondMenu.css
+++ b/src/components/secondMenu/secondMenu.css
@@ -7,5 +7,5 @@
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
-    gap: 1;
+    gap: 1rem;
 }
